force-app/main/default/objects/copado__Environment__c/fields/Validation_Only__c.field-meta.xml
<CustomField>
    <fullName>Validation_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field should be enabled on the source environment to enable the validation and restrict the promotion to the next environment.</inlineHelpText>
    <label>Validation_Only_from_source</label>
    <type>Checkbox</type>
</CustomField>