force-app/main/default/objects/copado__Environment__c/validationRules/cmcSf__Prevent_RunSpecifiedTest_For_Environment.validationRule-meta.xml
<ValidationRule>
    <fullName>cmcSf__Prevent_RunSpecifiedTest_For_Environment</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(cmcSf__Apex_Test_Level__c,&apos;Run Specified Tests&apos;)</errorConditionFormula>
    <errorMessage>We do not recommend to set “Run Specified Test” on an environment level, unless you are 100% sure that ALL deployments contain Apex. If this is the case, you can deactivate this Validation Rule.</errorMessage>
</ValidationRule>