force-app/main/default/objects/copado__Environment__c/listViews/MuleSofy.listView-meta.xml
<ListView>
    <fullName>MuleSofy</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MS</value>
    </filters>
    <label>MuleSoft</label>
</ListView>